OPENEUROPA-1695: Fixing behat test fail.

--- a/templates/corporate-blocks-footer.html.twig
+++ b/templates/corporate-blocks-footer.html.twig
@@ -1,3 +1,19 @@
+{#
+/**
+ * @file
+ * Default theme implementation for rendering corporate blocks footer.
+ *
+ * Available variables:
+ * - corporate_footer: Array with structure compatible to ECL ec-components-footer component.
+ *   - about_ec: Data about EC for corporate footer.
+ *   - social_media: Social media links for corporate footer.
+ *   - about_eu: Data about EU for corporate footer.
+ *
+ * @see template_preprocess_corporate_blocks_footer()
+ *
+ * @ingroup themeable
+ */
+#}
 <div class="ecl-footer__corporate-top">
   <div class="ecl-container">
     <div class="ecl-row">
