--- a/templates/corporate-blocks-footer.html.twig
+++ b/templates/corporate-blocks-footer.html.twig
@@ -14,62 +14,46 @@
  * @ingroup themeable
  */
 #}
-<div class="ecl-footer__corporate-top">
-  <div class="ecl-container">
-    <div class="ecl-row">
-      {% if corporate_footer.about_ec.items is defined and corporate_footer.about_ec.items is not empty %}
-        <div class="ecl-footer__column ecl-col-md">
-          <h2 class="ecl-heading ecl-heading--h4 ecl-footer__column-title" id="footer-corporate-about-ec">{{ corporate_footer.about_ec.title }}</h2>
-          <ul class="ecl-list ecl-list--unstyled ecl-footer__list" aria-labelledby="footer-corporate-about-ec">
-            {% for menu_item in corporate_footer.about_ec.items %}
-              <li class="ecl-footer__list-item">
-                {{ link(menu_item.label, menu_item.href) }}
-              </li>
-            {% endfor %}
-          </ul>
-        </div>
-      {% endif %}
-      {% if corporate_footer.social_media.items is defined and corporate_footer.social_media.items is not empty %}
-        <div class="ecl-footer__column ecl-col-md">
-          <h2 class="ecl-heading ecl-heading--h4 ecl-footer__column-title" id="footer-corporate-social-media">{{ corporate_footer.social_media.title }}</h2>
-          <ul class="ecl-list ecl-list--unstyled ecl-list--inline ecl-footer__list ecl-footer__list--inline  ecl-footer__social-links" aria-labelledby="footer-corporate-social-media">
-            {% for menu_item in corporate_footer.social_media.items %}
-              <li class="ecl-footer__list-item">
-                {{ link(menu_item.link.label, menu_item.link.href) }}
-              </li>
-            {% endfor %}
-          </ul>
-        </div>
-      {% endif %}
-      {% if corporate_footer.about_eu.items is defined and corporate_footer.about_eu.items is not empty %}
-        <div class="ecl-footer__column ecl-col-md">
-          <h2 class="ecl-heading ecl-heading--h4 ecl-footer__column-title" id="footer-corporate-about-eu">{{ corporate_footer.about_eu.title }}</h2>
-          <ul class="ecl-list ecl-list--unstyled ecl-footer__list" aria-labelledby="footer-corporate-about-eu">
-            {% for menu_item in corporate_footer.about_eu.items %}
-              <li class="ecl-footer__list-item">
-                {{ link(menu_item.label, menu_item.href) }}
-              </li>
-            {% endfor %}
-          </ul>
-        </div>
-      {% endif %}
-    </div>
-  </div>
+<div class="footer__corporate-top">
+  {% if corporate_footer.about_ec.items is defined and corporate_footer.about_ec.items is not empty %}
+    <h2 class="footer__column-title">{{ corporate_footer.about_ec.title }}</h2>
+    <ul class="footer__list">
+      {% for menu_item in corporate_footer.about_ec.items %}
+        <li class="footer__list-item">
+          {{ link(menu_item.label, menu_item.href) }}
+        </li>
+      {% endfor %}
+    </ul>
+  {% endif %}
+  {% if corporate_footer.social_media.items is defined and corporate_footer.social_media.items is not empty %}
+    <h2 class="footer__column-title">{{ corporate_footer.social_media.title }}</h2>
+    <ul class="footer__list">
+      {% for menu_item in corporate_footer.social_media.items %}
+        <li class="footer__list-item">
+          {{ link(menu_item.link.label, menu_item.link.href) }}
+        </li>
+      {% endfor %}
+    </ul>
+  {% endif %}
+  {% if corporate_footer.about_eu.items is defined and corporate_footer.about_eu.items is not empty %}
+    <h2 class="footer__column-title">{{ corporate_footer.about_eu.title }}</h2>
+    <ul class="footer__list">
+      {% for menu_item in corporate_footer.about_eu.items %}
+        <li>
+          {{ link(menu_item.label, menu_item.href) }}
+        </li>
+      {% endfor %}
+    </ul>
+  {% endif %}
 </div>
-<div class="ecl-footer__corporate-bottom">
-  <div class="ecl-container">
-    <div class="ecl-row">
-      <div class="ecl-col">
-        {% if corporate_footer.bottom_links is defined and corporate_footer.bottom_links is not empty %}
-          <ul class="ecl-list ecl-list--unstyled ecl-list--inline ecl-footer__list ecl-footer__list--inline">
-            {% for menu_item in corporate_footer.bottom_links %}
-              <li class="ecl-footer__list-item">
-                {{ link(menu_item.label, menu_item.href) }}
-              </li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-      </div>
-    </div>
-  </div>
+<div class="footer__corporate-bottom">
+  {% if corporate_footer.bottom_links is defined and corporate_footer.bottom_links is not empty %}
+    <ul class="footer__list">
+      {% for menu_item in corporate_footer.bottom_links %}
+        <li class="footer__list-item">
+          {{ link(menu_item.label, menu_item.href) }}
+        </li>
+      {% endfor %}
+    </ul>
+  {% endif %}
 </div>
