OPENEUROPA-1743: Fix comment.

--- a/templates/oe-corporate-blocks-site-switcher.html.twig
+++ b/templates/oe-corporate-blocks-site-switcher.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Default theme implementation for rendering corporate site switcher footer.
+ * Default theme implementation for rendering corporate site switcher block.
  *
  * Available variables:
  * - links: list of site switcher links.
