OPENEUROPA-2391: Minor fixes.

--- a/templates/oe-corporate-blocks-eu-footer.html.twig
+++ b/templates/oe-corporate-blocks-eu-footer.html.twig
@@ -21,7 +21,7 @@
     <ul class="footer__list">
       {% for menu_item in corporate_footer.contact %}
         <li class="footer__list-item">
-          {{ menu_item|raw }}
+          {{ menu_item }}
         </li>
       {% endfor %}
     </ul>
