--- a/templates/oe-corporate-blocks-ec-footer.html.twig
+++ b/templates/oe-corporate-blocks-ec-footer.html.twig
@@ -50,8 +50,8 @@
     {% if corporate_footer.site_name is not empty %}
       <h4 class="footer__site-name">{{ link(corporate_footer.site_name.label, corporate_footer.site_name.href) }}</h4>
     {% endif %}
-    {% if corporate_footer.content_owner_details is not empty %}
-      <span class="footer__content-owner-details">{{ corporate_footer.content_owner_details }}</span>
+    {% if site_owner is not empty %}
+      <span class="footer__content-owner-details">{{ site_owner }}</span>
     {% endif %}
     {% if corporate_footer.class_navigation is not empty %}
       <ul class="footer__list footer__class-navigation">
