--- a/templates/oe-corporate-blocks-eu-footer.html.twig
+++ b/templates/oe-corporate-blocks-eu-footer.html.twig
@@ -43,8 +43,8 @@
   </div>
 {% endif %}
 <div class="footer__corporate-top--eu">
-  {% if corporate_footer.content_owner_details is not empty %}
-    <span class="footer__content-owner-details">{{ corporate_footer.content_owner_details }}</span>
+  {% if site_owner is not empty %}
+    <span class="footer__content-owner-details">{{ site_owner }}</span>
   {% endif %}
   {% if corporate_footer.contact %}
     <h3>{{ corporate_footer.contact_title }}</h3>
