EWPP-129: Fix comments, improve README.md and use config name constant.

--- a/templates/oe-corporate-blocks-ec-footer.html.twig
+++ b/templates/oe-corporate-blocks-ec-footer.html.twig
@@ -4,16 +4,16 @@
  * Default theme implementation for rendering corporate blocks footer.
  *
  * Available variables:
+ * - site_owner: Site's owner.
  * - site_specific_footer: Array (optional) with structure of the site specific footer compatible with the ECL ec-components-footer component.
  *   - site_identity: Site identity for custom footer.
  *   - social_links: Social media links for custom footer.
  *   - other_links: Other links for custom footer.
  * - corporate_footer: Array with structure of corporate footer compatible with the ECL ec-components-footer component.
  *   - site_name: Site's name.
- *   - content_owner_details: Indicates ownership over the site's content.
  *   - class_navigation: Provides the user with navigation through class names.
  *   - service_navigation: Contains services links - consistent throughout the family sites.
- *   - legal_navigation	: Contains legal information links - consistent throughout the family sites.
+ *   - legal_navigation: Contains legal information links - consistent throughout the family sites.
  *
  * @ingroup themeable
  */
